--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,6 +1,6 @@
 <div class="main">
     <div class="nav-bar">
-        <app-nav-bar></app-nav-bar>
+        <!-- <app-nav-bar></app-nav-bar> -->
     </div>
     <div class="audio-visualizer">
         <app-audio-visualizer></app-audio-visualizer>
