--- a/src/app/main/nav-bar/nav-bar.component.scss
+++ b/src/app/main/nav-bar/nav-bar.component.scss
@@ -4,4 +4,12 @@
     .spacer {
         flex: 1 1 auto;
     }
+    .music{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .upload{
+            margin: 0 10px;
+        }
+    }
 }
