init visualizer controller

--- a/src/app/main/nav-bar/nav-bar.component.html
+++ b/src/app/main/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <div #navBar class="nav-bar">
     <mat-toolbar color="primary">
-        <button mat-icon-button class="menu-icon">
+        <button mat-icon-button class="menu-icon" (click)="toggleController()">
             <mat-icon>menu</mat-icon>
         </button>
         <span>My App</span>
