--- a/src/app/main/audio-visualizer/audio-visualizer.component.html
+++ b/src/app/main/audio-visualizer/audio-visualizer.component.html
@@ -1,3 +1,10 @@
-<div #audioVisualizer class="audio-visualizer">
+<mat-drawer-container class="visualizer-container" [hasBackdrop]="false">
+    <mat-drawer class="sidenav" #drawer [mode]="'over'" [opened]="isOpenedController">
+        <app-visualizer-controller></app-visualizer-controller>
+    </mat-drawer>
+    <mat-drawer-content>
+        <div #audioVisualizer class="audio-visualizer">
     
-</div>
+        </div>
+    </mat-drawer-content>
+</mat-drawer-container>
