--- a/src/app/main/audio-visualizer/audio-visualizer.component.scss
+++ b/src/app/main/audio-visualizer/audio-visualizer.component.scss
@@ -1,4 +1,8 @@
-.audio-visualizer {
+.visualizer-container {
     width: 100%;
     height: 100%;
+    .audio-visualizer {
+        width: 100%;
+        height: 100%;
+    }
 }
