--- a/src/app/main/audio-visualizer/visualizer-controller/visualizer-controller.component.html
+++ b/src/app/main/audio-visualizer/visualizer-controller/visualizer-controller.component.html
@@ -16,21 +16,27 @@
                 </mat-form-field>
             </div>
             <div class="form-group">
+                <mat-label>缓冲等级</mat-label>
+                <mat-slider class="slider" [discrete]="true" [step]="1" [min]="1" [max]="20">
+                    <input placeholder="" matSliderThumb formControlName="level">
+                </mat-slider>
+            </div>
+            <div class="form-group">
                 <mat-label>宽度</mat-label>
                 <mat-slider class="slider" [discrete]="true" [step]="1" [min]="1" [max]="20">
-                    <input type="number" placeholder="" matSliderThumb formControlName="width">
+                    <input placeholder="" matSliderThumb formControlName="width">
                 </mat-slider>
             </div>
             <div class="form-group">
                 <mat-label>数量</mat-label>
                 <mat-slider class="slider" [discrete]="true" [step]="1" [min]="20" [max]="200">
-                    <input type="number" placeholder="" matSliderThumb formControlName="unit">
+                    <input placeholder="" matSliderThumb formControlName="unit">
                 </mat-slider>
             </div>
             <div class="form-group">
                 <mat-label>间距</mat-label>
                 <mat-slider class="slider" [discrete]="true" [step]="1" [min]="0" [max]="20">
-                    <input type="number" placeholder="" matSliderThumb formControlName="spacing">
+                    <input placeholder="" matSliderThumb formControlName="spacing">
                 </mat-slider>
             </div>
             <mat-divider></mat-divider>
